<resources>
    <string name="app_name">KultivisiSe</string>
    <string name="hint_ime">Ime</string>
    <string name="hint_prezime">Prezime</string>
    <string name="hint_email">Email</string>
    <string name="hint_lozinka">Lozinka</string>
    <string name="hint_potvrdi">Potvrdi lozinku</string>
    <string name="text_prijava">Prijavi se</string>
    <string name="text_registracija">Registriraj se</string>
    <string name="greska_poruka_ime">Unesi ispravno ime</string>
    <string name="greska_poruka_email">Unesi ispravnu e-mail adresu</string>
    <string name="greska_poruka_godine">Unesi ispravan broj godina</string>
    <string name="greska_poruka_lozinka">Unesi ispravnu lozinku</string>
    <string name="uspjesno_poruka">Uspješna registracija</string>
    <string name="text_ne_registriran">Još uvijek niste registrirani?</string>
    <string name="text_registrirani">Već ste registrirani?</string>
    <string name="greska_lozinka_neodgovara">Lozinka ne odgovara</string>
    <string name="greska_email_postoji">Email adresa već postoji</string>
    <string name="greska_email_lozinka">Greška u email adresi ili lozinci</string>
    <string name="title_activity_main">KultivisiSe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="rezervacija_naziv_hint">Unesi naziv rezervacije</string>
    <string name="rezervacija_naziv_labela">Naslov</string>
    <string name="rezervacija_detalji_label">Detalji</string>
    <string name="rezervirano_labela">Rezervirano</string>
    <string name="date_picker_title">Datum rezervacije:</string>
    <string name="nova_rezervacija">Nova rezervacija</string>
    <string name="show_subtitle">Prikaži podnaslov</string>
    <string name="hide_subtitle">Sakrij podnaslov</string>
    <string name="subtitle_format">%1$d rezervacija</string>

</resources>
