<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bojaTexta"
    tools:context="com.example.fujitsue751.prijava.aktivnosti.prijavaActivity">

   <android.support.v7.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_margin="20dp">

       <android.support.v7.widget.AppCompatImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="40dp"
           android:src="@drawable/logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/LayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:errorTextAppearance="@style/error_appearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary"
             />
       </android.support.design.widget.TextInputLayout>


       <android.support.design.widget.TextInputLayout
           android:id="@+id/LayoutLozinka"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp">

           <android.support.design.widget.TextInputEditText
               android:id="@+id/lozinka"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_lozinka"
               android:inputType="textPassword"
               android:textColorHint="@color/colorPrimary"/>
       </android.support.design.widget.TextInputLayout>
       
       <android.support.v7.widget.AppCompatButton
           android:id="@+id/dugme_prijava"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
           android:textColor="@color/bojaTexta"
           android:background="@color/bojaDugme"
           android:text="@string/text_prijava"/>

       <android.support.v7.widget.AppCompatTextView
           android:id="@+id/linkRegistracija"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:gravity="center"
           android:text="@string/text_ne_registriran"
           android:textSize="16sp"
           android:textColor="@color/colorPrimary"/>

</android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
